Uhuru-av-Windows :: use _sopen_s instead of open +  add share and mode flag on file open + add uhuru log to function  ConvertDeviceNameToMsDosName() + add dependencies dll to installer project.

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ VS/json-c/json-c/json-c.v12.suo
 VS/UhuruAV/UhuruAV_setup/Debug/*
 VS/UhuruAV/UhuruGuardSetup/Debug/*
 VS/UhuruAV/modulePDF/Debug/*
+VS/dependencies/*
 out/
 documentation/specs-ihm/tatou-ihm/~$$tatouIHM.~vsdx
 
