--- a/VS/UhuruAV/UhuruSvc/UhuruSvc.vcxproj
+++ b/VS/UhuruAV/UhuruSvc/UhuruSvc.vcxproj
@@ -90,6 +90,7 @@
     <ClCompile Include="..\..\..\libuhuru\src\json\updatedb\uh_json_parse.c" />
     <ClCompile Include="..\..\..\libuhuru\src\utils\getopt.c" />
     <ClCompile Include="..\..\..\libuhuru\src\utils\uh_json.c" />
+    <ClCompile Include="uh_info.c" />
     <ClCompile Include="log.c" />
     <ClCompile Include="named_pipe_client.c" />
     <ClCompile Include="named_pipe_server.c" />
@@ -110,6 +111,7 @@
     <ClInclude Include="..\..\..\libuhuru\src\json\updatedb\uh_json_parse.h" />
     <ClInclude Include="..\..\..\libuhuru\src\utils\getopt.h" />
     <ClInclude Include="..\..\..\libuhuru\src\utils\uh_json.h" />
+    <ClInclude Include="uh_info.h" />
     <ClInclude Include="log.h" />
     <ClInclude Include="named_pipe_client.h" />
     <ClInclude Include="named_pipe_server.h" />
