--- a/VS/UhuruAV/UhuruSvc/UhuruSvc.vcxproj
+++ b/VS/UhuruAV/UhuruSvc/UhuruSvc.vcxproj
@@ -108,7 +108,7 @@
     <ClInclude Include="..\..\..\libuhuru\src\json\ui\jsonhandler_p.h" />
     <ClInclude Include="..\..\..\libuhuru\src\json\ui\scan.h" />
     <ClInclude Include="..\..\..\libuhuru\src\json\ui\state.h" />
-    <ClInclude Include="..\..\..\libuhuru\src\json\ui\ui_win.h" />
+    <ClInclude Include="..\..\..\libuhuru\src\json\ui\ui.h" />
     <ClInclude Include="..\..\..\libuhuru\src\json\updatedb\uh_json_parse.h" />
     <ClInclude Include="..\..\..\libuhuru\src\utils\getopt.h" />
     <ClInclude Include="..\..\..\libuhuru\src\utils\uh_json.h" />
