--- a/VS/UhuruAV/UhuruSvc/UhuruSvc.vcxproj.filters
+++ b/VS/UhuruAV/UhuruSvc/UhuruSvc.vcxproj.filters
@@ -140,14 +140,14 @@
     <ClInclude Include="..\..\..\libuhuru\src\json\ui\state.h">
       <Filter>Fichiers d%27en-tête\json</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\libuhuru\src\json\ui\ui_win.h">
-      <Filter>Fichiers d%27en-tête\json</Filter>
-    </ClInclude>
     <ClInclude Include="uh_info.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
     <ClInclude Include="others.h">
       <Filter>Fichiers d%27en-tête\utils</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\libuhuru\src\json\ui\ui.h">
+      <Filter>Fichiers d%27en-tête\json</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
