fixing make dist

--- a/libuhuru/src/linux/daemon/Makefile.am
+++ b/libuhuru/src/linux/daemon/Makefile.am
@@ -24,6 +24,7 @@ unixsockserver.c \
 unixsockserver.h \
 tcpsockserver.c \
 tcpsockserver.h \
+../net/netdefaults.h \
 ../../utils/getopt.c \
 ../../utils/getopt.h 
 
