--- a/libuhuru/configure.ac
+++ b/libuhuru/configure.ac
@@ -140,6 +140,7 @@ src/linux/modules/on-access-linux/Makefile
 src/linux/modules/on-access-linux/conf/Makefile
 src/linux/modules/on-access-linux/src/Makefile
 src/linux/modules/on-access-linux/tests/Makefile
+src/linux/net/Makefile
 src/linux/service/Makefile
 src/linux/tools/Makefile
 src/os/Makefile
