fixed "make distcheck"

--- a/libuhuru/src/linux/modules/on-access-linux/src/Makefile.am
+++ b/libuhuru/src/linux/modules/on-access-linux/src/Makefile.am
@@ -31,3 +31,6 @@ install-exec-hook:
 
 install-data-hook:
 	-rm -f "$(DESTDIR)$(modulesdir)"/on-access-linux.la "$(DESTDIR)$(modulesdir)"/on-access-linux.a
+
+uninstall-hook:
+	-rm -f "$(DESTDIR)$(modulesdir)"/on-access-linux.so
