--- a/libuhuru/src/linux/modules/on-access-linux/tests/Makefile.am
+++ b/libuhuru/src/linux/modules/on-access-linux/tests/Makefile.am
@@ -1,6 +1,6 @@
 AUTOMAKE_OPTIONS=subdir-objects
 
-check_PROGRAMS=inotify-test stamp-test queue-test #mount-test
+check_PROGRAMS=inotify-test stamp-test #queue-test mount-test
 
 AM_CFLAGS=-I$(top_srcdir)/include -I$(top_srcdir)/src/linux/modules/on-access-linux/src @GLIB2_CFLAGS@ @GIO2_CFLAGS@
 LDADD= @GLIB2_LIBS@ @GIO2_LIBS@ 
@@ -10,4 +10,4 @@ inotify_test_SOURCES=inotify-test.c
 
 stamp_test_SOURCES=stamp-test.c 
 
-queue_test_SOURCES=queue-test.c ../src/queue.c ../src/queue.h
+#queue_test_SOURCES=queue-test.c ../src/queue.c ../src/queue.h
