--- a/libuhuru/conf/uhuru.conf
+++ b/libuhuru/conf/uhuru.conf
@@ -46,14 +46,14 @@ alert-dir="@localstatedir@/spool/uhuru"
 [quarantine]
 
 # is quarantine enabled?
-enable=0
+enable=1
 
 # quarantine directory
 # files containing malware will be moved to this directory, renamed and made 
 # non-readable
 # quarantine directory must be mode 333 octal. This is normaly managed by 
 # package installation scripts
-quarantine-dir="@localstatedir@/lib/uhuru/quarantine"
+quarantine-dir="Quarantine"
 
 
 # [uhuru]
