--- a/VS/UhuruAV/UhuruSvc/UhuruSvc.vcxproj
+++ b/VS/UhuruAV/UhuruSvc/UhuruSvc.vcxproj
@@ -84,6 +84,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\libuhuru\src\json\ui\jsonhandler.c" />
+    <ClCompile Include="..\..\..\libuhuru\src\json\ui\quarantine.c" />
     <ClCompile Include="..\..\..\libuhuru\src\json\ui\scan.c" />
     <ClCompile Include="..\..\..\libuhuru\src\json\ui\state.c" />
     <ClCompile Include="..\..\..\libuhuru\src\json\ui\ui_win.c" />
@@ -95,7 +96,7 @@
     <ClCompile Include="log.c" />
     <ClCompile Include="named_pipe_client.c" />
     <ClCompile Include="named_pipe_server.c" />
-    <ClCompile Include="quarantine.c" />
+    <ClCompile Include="uh_quarantine.c" />
     <ClCompile Include="register.c" />
     <ClCompile Include="scan_on_access.c" />
     <ClCompile Include="scan_on_demand.c" />
@@ -106,6 +107,7 @@
   <ItemGroup>
     <ClInclude Include="..\..\..\libuhuru\src\json\ui\jsonhandler.h" />
     <ClInclude Include="..\..\..\libuhuru\src\json\ui\jsonhandler_p.h" />
+    <ClInclude Include="..\..\..\libuhuru\src\json\ui\quarantine.h" />
     <ClInclude Include="..\..\..\libuhuru\src\json\ui\scan.h" />
     <ClInclude Include="..\..\..\libuhuru\src\json\ui\state.h" />
     <ClInclude Include="..\..\..\libuhuru\src\json\ui\ui.h" />
@@ -117,7 +119,7 @@
     <ClInclude Include="log.h" />
     <ClInclude Include="named_pipe_client.h" />
     <ClInclude Include="named_pipe_server.h" />
-    <ClInclude Include="quarantine.h" />
+    <ClInclude Include="uh_quarantine.h" />
     <ClInclude Include="register.h" />
     <ClInclude Include="scan_on_access.h" />
     <ClInclude Include="scan_on_demand.h" />
