--- a/VS/UhuruAV/libuhuru_core/libuhuru_core.vcxproj.filters
+++ b/VS/UhuruAV/libuhuru_core/libuhuru_core.vcxproj.filters
@@ -117,6 +117,9 @@
     <ClInclude Include="..\..\..\libuhuru\src\libcore\builtin-modules\onaccess_windows.h">
       <Filter>Source Files\libcore\builtin-modules</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\libuhuru\src\libcore\builtin-modules\quarantine.h">
+      <Filter>Source Files\libcore\builtin-modules</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\libuhuru\src\libcore\action.c">
@@ -177,6 +180,9 @@
       <Filter>Source Files\libcore\builtin-modules</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\libuhuru\src\libcore\builtin-modules\onaccess_windows.c">
+      <Filter>Source Files\libcore\builtin-modules</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\libuhuru\src\libcore\builtin-modules\quarantine_windows.c">
       <Filter>Source Files\libcore\builtin-modules</Filter>
     </ClCompile>
   </ItemGroup>
