--- a/VS/UhuruAV/libuhuru_core/libuhuru_core.vcxproj.filters
+++ b/VS/UhuruAV/libuhuru_core/libuhuru_core.vcxproj.filters
@@ -120,6 +120,9 @@
     <ClInclude Include="..\..\..\libuhuru\src\libcore\builtin-modules\quarantine.h">
       <Filter>Source Files\libcore\builtin-modules</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\libuhuru\include\libuhuru\libcore\notify.h">
+      <Filter>Header Files\libcore</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\libuhuru\src\libcore\action.c">
@@ -184,6 +187,9 @@
     </ClCompile>
     <ClCompile Include="..\..\..\libuhuru\src\libcore\builtin-modules\quarantine_windows.c">
       <Filter>Source Files\libcore\builtin-modules</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\libuhuru\src\libcore\notify.c">
+      <Filter>Source Files\libcore</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
