conf in progress

--- a/libuhuru/include/libuhuru/Makefile.am
+++ b/libuhuru/include/libuhuru/Makefile.am
@@ -4,6 +4,7 @@ core.h
 nobase_pkginclude_HEADERS= \
 common/action.h \
 common/status.h \
+libcore/conf.h \
 libcore/error.h \
 libcore/filectx.h \
 libcore/handle.h \
