new version of configuration tested

--- a/libuhuru/conf/try/uhuru2.conf
+++ b/libuhuru/conf/try/uhuru2.conf
@@ -7,29 +7,12 @@
 # white list of directories: files in these directories will never be scanned for on-access scan
 white-list-dir="/dev"; "/etc"; "/lib"; "/lib32"; "/lib64"; "/libx32"; "/opt"; "/sbin"; "/usr"; "/var"
 
-# scan executables with module5_2 and clamav
-mime-types-elf = "application/x-executable"; "application/x-object"; "application/x-sharedlib"
-modules-elf = module5_2; clamav
-# scan windows executables with module5_2 and clamav
-mime-types-pe ="application/x-dosexec"; "application/x-dosexec"; "application/x-msdos-program"; "application/x-msdownload"
-modules-pe = clamav; module5_2
-# scan PDF with clamav and pdf
-mime-types-pdf = "application/pdf"
-modules-pdf = clamav; pdf
-# clamav scans every file if no other module applies
+modules = clamav; module5_2
 modules-default=clamav
 
 [on-access]
 
-# scan executables with module5_2 and clamav
-mime-type-elf = "application/x-executable"; "application/x-object"; "application/x-sharedlib"
-modules-elf = clamav
-# scan windows executables with module5_2 and clamav
-mime-type-pe = "application/x-dosexec"; "application/x-msdos-program"; "application/x-msdownload"
-modules-pe = module5_2; clamav
-# scan PDF with clamav 
-mime-types-pdf = "application/pdf"
-modules-pdf = clamav
+modules = clamav
 
 # 1M, must support units ;-)
 max-size=1048576 
