--- a/libuhuru/src/linux/modules/on-access-linux/conf/on-access-linux.conf
+++ b/libuhuru/src/linux/modules/on-access-linux/conf/on-access-linux.conf
@@ -20,18 +20,17 @@ enable-removable-media=1
 mount="/home"
 
 # monitored directories
-directory="/var/tmp"
-directory="/tmp"
+directory="/var/tmp"; "/tmp"
 
 # white list of directories: files in these directories will never be scanned for on-access scan
 white-list-dir="/bin"; "/boot"; "/dev"; "/etc"; "/lib"; "/lib32"; "/lib64"; "/libx32"; "/opt"; "/proc"; "/run"; "/sbin"; "/sys"; "/usr"
 
 # scan executables with clamav
-mime-type="application/x-executable"; clamav
+#mime-type="application/x-executable"; clamav
 # scan PDF with clamav
-mime-type="application/pdf"; clamav
+#mime-type="application/pdf"; clamav
 # scan ZIP with clamav
-mime-type="application/zip"; clamav
+#mime-type="application/zip"; clamav
 
 # 1M, must support units ;-)
 max-size=1048576 
