--- a/libuhuru/include/libuhuru/Makefile.am
+++ b/libuhuru/include/libuhuru/Makefile.am
@@ -10,6 +10,7 @@ libcore/filectx.h \
 libcore/handle.h \
 libcore/info.h \
 libcore/module.h \
+libcore/notify.h \
 libcore/ondemand.h \
 libcore/scanconf.h \
 libcore/scan.h \
