Uhuru-av-windows :: new conf api  :: save conf in registry  + restore conf from registry

--- a/VS/UhuruAV/UhuruSvc/UhuruSvc.vcxproj.filters
+++ b/VS/UhuruAV/UhuruSvc/UhuruSvc.vcxproj.filters
@@ -96,6 +96,9 @@
     <ClCompile Include="uh_notify.c">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="uh_conf.c">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="service.h">
@@ -162,6 +165,9 @@
       <Filter>Fichiers d%27en-tête\json\ui</Filter>
     </ClInclude>
     <ClInclude Include="uh_notify.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="uh_conf.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
   </ItemGroup>
