--- a/libuhuru/conf/uhuru.conf.in
+++ b/libuhuru/conf/uhuru.conf.in
@@ -1,29 +1,16 @@
-#
-# Linux on-demand scan : module configuration
-#
+
+# Linux on-demand scan
 
 [on-demand]
 
-# white list of directories: files in these directories will never be scanned for on-access scan
+# white list of directories: files in these directories will never be scanned
 white-list-dir = "/boot"; "/dev"; "/etc"; "/proc"; "/run"; "/sys"; "/var"
 
 # scan with module5_2 and clamav
 modules=module5_2; clamav
 default-modules=clamav
 
-#mime-type = "application/x-executable"; module5_2; clamav
-#mime-type = "application/x-object"; module5_2; clamav
-#mime-type = "application/x-sharedlib"; module5_2; clamav
-# scan windows executables with module5_2 and clamav
-#mime-type = "application/x-dosexec"; clamav; module5_2
-#mime-type = "application/x-msdos-program"; module5_2; clamav
-#mime-type = "application/x-msdownload"; module5_2; clamav
-# scan PDF with clamav
-#mime-type = "application/pdf"; clamav
-# clamav scans every file if no other module applies
-#mime-type = "*"; clamav
-
-# 1M, must support units ;-)
+# 1M, must support units
 max-size = 1048576 
 
 [alert]
@@ -43,10 +30,4 @@ enable = 0
 # package installation scripts
 quarantine-dir = "@localstatedir@/lib/uhuru/quarantine"
 
-
-# [uhuru]
-# REMOVED, path loading directly from uhuru.c
-# this directive trigs loading of the configuration files of the dynamically 
-# loaded modules
-# conf-dir="@sysconfdir@/uhuru/conf.d"
 
