--- a/libuhuru/src/linux/modules/on-access-linux/conf/on-access-linux.conf
+++ b/libuhuru/src/linux/modules/on-access-linux/conf/on-access-linux.conf
@@ -25,12 +25,11 @@ directory="/var/tmp"; "/tmp"
 # white list of directories: files in these directories will never be scanned for on-access scan
 white-list-dir="/bin"; "/boot"; "/dev"; "/etc"; "/lib"; "/lib32"; "/lib64"; "/libx32"; "/opt"; "/proc"; "/run"; "/sbin"; "/sys"; "/usr"
 
-# scan executables with clamav
-#mime-type="application/x-executable"; clamav
-# scan PDF with clamav
-#mime-type="application/pdf"; clamav
-# scan ZIP with clamav
-#mime-type="application/zip"; clamav
+# scanned mime types: scan executables, PDF documents and ZIP archives
+mime-types="application/x-executable"; "application/pdf"; "application/zip"
+
+# scan modules: scan with clamav only
+modules= "clamav"
 
 # 1M, must support units ;-)
-max-size=1048576 
+#max-size=1048576 
