--- a/core/Makefile.am
+++ b/core/Makefile.am
@@ -1,8 +1,4 @@
-if COND_DOC
-OPT_DOC_DIR=doc
-endif
-
-SUBDIRS=conf include src tests pkgconfig $(OPT_DOC_DIR)
+SUBDIRS=libarmadito
 
 TAGDIRS=\
 $(top_srcdir)/doc \
