renamed uhuru to armadito in libarmadito include files

--- a/core/libarmadito/Makefile.am
+++ b/core/libarmadito/Makefile.am
@@ -2,5 +2,5 @@ if COND_DOC
 OPT_DOC_DIR=doc
 endif
 
-SUBDIRS=conf include src tests pkgconfig $(OPT_DOC_DIR)
+SUBDIRS=conf include pkgconfig # $(OPT_DOC_DIR) src tests
 
