--- a/core/libarmadito/Makefile.am
+++ b/core/libarmadito/Makefile.am
@@ -2,5 +2,5 @@ if COND_DOC
 OPT_DOC_DIR=doc
 endif
 
-SUBDIRS=conf include pkgconfig # $(OPT_DOC_DIR) src tests
+SUBDIRS=conf include pkgconfig src # $(OPT_DOC_DIR) src tests
 
